--- a/blog-sec.html
+++ b/blog-sec.html
@@ -7,11 +7,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <!-- bootstrap grid css -->
-    <link rel="stylesheet" href="css/plugins/bootstrap-grid.css">
+    <link rel="stylesheet" href="https://navipromotions.in/css/plugins/bootstrap-grid.css">
     <!-- font awesome css -->
-    <link rel="stylesheet" href="css/plugins/font-awesome.min.css">
+    <link rel="stylesheet" href="https://navipromotions.in/css/plugins/font-awesome.min.css">
     <!-- swiper css -->
-    <link rel="stylesheet" href="css/plugins/swiper.min.css">
+    <link rel="stylesheet" href="https://navipromotions.in/css/plugins/swiper.min.css">
     <link rel="icon" type="image/png" href="https://navipromotions.in/img/logo/icon-logo.png"> 
     <link rel="canonical" href="https://navipromotions.in/blog-sec.html">
     <meta name="referrer" content="strict-origin-when-cross-origin">
@@ -21,7 +21,7 @@
 
    
     <!-- itsulu css -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://navipromotions.in/css/style.css">
     <title>Navi Promotions - Latest Blogs and Insights</title>
 </head>
 
