--- a/blog4.html
+++ b/blog4.html
@@ -7,18 +7,18 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <!-- bootstrap grid css -->
-    <link rel="stylesheet" href="css/plugins/bootstrap-grid.css">
+    <link rel="stylesheet" href="https://navipromotions.in/css/plugins/bootstrap-grid.css">
     <!-- font awesome css -->
-    <link rel="stylesheet" href="css/plugins/font-awesome.min.css">
+    <link rel="stylesheet" href="https://navipromotions.in/css/plugins/font-awesome.min.css">
     <link rel="icon" type="image/png" href="https://navipromotions.in/img/logo/icon-logo.png"> 
     <!-- swiper css -->
-    <link rel="stylesheet" href="css/plugins/swiper.min.css">
+    <link rel="stylesheet" href="https://navipromotions.in/css/plugins/swiper.min.css">
     <link rel="canonical" href="https://navipromotions.in/blog4.html">
     <meta name="referrer" content="strict-origin-when-cross-origin">
 
     <meta http-equiv="X-Frame-Options" content="DENY">
     <meta name="description" content="Navi Promotions offers digital marketing, branding, and promotional services to boost online presence.">    <!-- itsulu css -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://navipromotions.in/css/style.css">
     <title>Navi Promotions - Why Every Business Needs Digital Marketing</title>
 </head>
 
