--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <!-- bootstrap grid css -->
-    <link rel="stylesheet" href="css/plugins/bootstrap-grid.css">
+    <link rel="stylesheet" href="https://navipromotions.in/css/plugins/bootstrap-grid.css">
     <!-- font awesome css -->
-    <link rel="stylesheet" href="css/plugins/font-awesome.min.css">
+    <link rel="stylesheet" href="https://navipromotions.in/css/plugins/font-awesome.min.css">
     <!-- swiper css -->
-    <link rel="stylesheet" href="css/plugins/swiper.min.css">
+    <link rel="stylesheet" href="https://navipromotions.in/css/plugins/swiper.min.css">
     <!-- itsulu css -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://navipromotions.in/css/style.css">
     <!-- FontAwesome CSS -->
     <meta name="referrer" content="strict-origin-when-cross-origin">
     <meta http-equiv="X-Frame-Options" content="DENY">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/https://navipromotions.in/css/all.min.css">
 
     <link rel="icon" type="image/png" href="https://navipromotions.in/img/logo/icon-logo.png"> 
 
