--- a/project4.html
+++ b/project4.html
@@ -9,7 +9,7 @@
     <!-- bootstrap grid css -->
     <link rel="stylesheet" href="https://navipromotions.in/css/plugins/bootstrap-grid.css">
     <!-- font awesome css -->
-    <link rel="stylesheet" href="https://navipromotions.in/css/plugins/font-awesome.min.css">
+    <link rel="stylesheet" href="css/plugins/font-awesome.min.css">
     <link rel="icon" type="image/png" href="https://navipromotions.in/img/logo/icon-logo.png"> 
     <!-- swiper css -->
     <link rel="stylesheet" href="https://navipromotions.in/css/plugins/swiper.min.css">
@@ -308,7 +308,7 @@
         
                     <div class="col-xl-6 mil-mb-60">
                         <div class="mil-project-cover">
-                            <img src="https://navipromotions.in/img/projects/alagugym3.avif" alt="Alagu Gym Impact">
+                            <img src="https://navipromotions.in/img/projects/algugym3.avif" alt="Alagu Gym Impact">
                         </div>
                     </div>
                 </div>
