--- a/404.html
+++ b/404.html
@@ -9,7 +9,7 @@
     <!-- bootstrap grid css -->
     <link rel="stylesheet" href="https://navipromotions.in/css/plugins/bootstrap-grid.css">
     <!-- font awesome css -->
-    <link rel="stylesheet" href="https://navipromotions.in/css/plugins/font-awesome.min.css">
+    <link rel="stylesheet" href="css/plugins/font-awesome.min.css">
     <!-- swiper css -->
     <link rel="stylesheet" href="https://navipromotions.in/css/plugins/swiper.min.css">
     <!-- itsulu css -->
