--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
     <!-- bootstrap grid css -->
     <link rel="stylesheet" href="https://navipromotions.in/css/plugins/bootstrap-grid.css">
     <!-- font awesome css -->
-    <link rel="stylesheet" href="https://navipromotions.in/css/plugins/font-awesome.min.css">
+    <link rel="stylesheet" href="css/plugins/font-awesome.min.css">
     <!-- swiper css -->
     <link rel="stylesheet" href="https://navipromotions.in/css/plugins/swiper.min.css">
     <link rel="canonical" href="https://navipromotions.in/about.html">
@@ -17,9 +17,9 @@
     <meta http-equiv="X-Frame-Options" content="DENY">
 
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/https://navipromotions.in/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/https://navipromotions.in/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/all.min.css">
     <meta name="description" content="Navi Promotions offers digital marketing, branding, and promotional services to boost online presence.">
 
     
