--- a/portfolio.html
+++ b/portfolio.html
@@ -9,7 +9,7 @@
     <!-- bootstrap grid css -->
     <link rel="stylesheet" href="https://navipromotions.in/css/plugins/bootstrap-grid.css">
     <!-- font awesome css -->
-    <link rel="stylesheet" href="https://navipromotions.in/css/plugins/font-awesome.min.css">
+    <link rel="stylesheet" href="css/plugins/font-awesome.min.css">
     <link rel="icon" type="image/png" href="https://navipromotions.in/img/logo/icon-logo.png"> 
     <!-- swiper css -->
     <link rel="stylesheet" href="https://navipromotions.in/css/plugins/swiper.min.css">
@@ -21,6 +21,7 @@
 
     <meta name="description" content="Navi Promotions offers digital marketing, branding, and promotional services to boost online presence.">
     <title>Navi Promotions - Portfolio and Projects</title>
+
 </head>
 
 <body>
