--- a/blog.html
+++ b/blog.html
@@ -196,7 +196,7 @@
                             <ul class="mil-pagination-numbers">
                                 <li class="mil-active"><a href="blog.html">1</a></li>
                                 <li><a href="blog-sec.html">2</a></li>
-                                <!-- <li><a href="#.">3</a></li> -->
+                                <li><a href="blog-sec1.html">3</a></li>
                             </ul>
                             <div class="mil-slider-nav">
                                 <div class="mil-slider-btn-next mil-blog-next"><span class="mil-h6"><a href="blog-sec.html">Next</a></span><i class="fas fa-arrow-right"></i></div>
