--- a/careers.html
+++ b/careers.html
@@ -498,7 +498,7 @@
                                 <div class="mil-description">
                                     <div class="mil-card-title">
                                         <h4 class="mil-mb-20">How Branding Elevates Your Business Growth</h4>
-                                        <h6>by: <span class="mil-accent">Jane Meldrum</span></h6>
+                                        <!-- <h6>by: <span class="mil-accent">Jane Meldrum</span></h6> -->
                                     </div>
                                     <div class="mil-card-text">
                                         <p>Discover how effective branding strategies can boost your business visibility, create trust, and leave a lasting impact on your audience.</p>
@@ -513,7 +513,7 @@
                                 <div class="mil-description">
                                     <div class="mil-card-title">
                                         <h4 class="mil-mb-20">Maximizing Engagement with Social Media Strategies</h4>
-                                        <h6>by: <span class="mil-accent">Jane Meldrum</span></h6>
+                                        <!-- <h6>by: <span class="mil-accent">Jane Meldrum</span></h6> -->
                                     </div>
                                     <div class="mil-card-text">
                                         <p>Learn how to leverage social media to reach the right audience, increase engagement, and drive conversions effectively.</p>
@@ -534,7 +534,7 @@
                                 <div class="mil-description">
                                     <div class="mil-card-title">
                                         <h4 class="mil-mb-20">The Power of Outdoor Advertising in Local Markets</h4>
-                                        <h6>by: <span class="mil-accent">Jane Meldrum</span></h6>
+                                        <!-- <h6>by: <span class="mil-accent">Jane Meldrum</span></h6> -->
                                     </div>
                                     <div class="mil-card-text">
                                         <p>Explore why billboards, hoardings, and other outdoor advertising methods still hold a strong impact in the digital era.</p>
@@ -553,7 +553,7 @@
                                 <div class="mil-description">
                                     <div class="mil-card-title">
                                         <h4 class="mil-mb-20">Why Every Business Needs Digital Marketing</h4>
-                                        <h6>by: <span class="mil-accent">Jane Meldrum</span></h6>
+                                        <!-- <h6>by: <span class="mil-accent">Jane Meldrum</span></h6> -->
                                     </div>
                                     <div class="mil-card-text">
                                         <p>Understand the key components of digital marketing and how they help businesses stay ahead in today's competitive landscape.</p>
@@ -568,7 +568,7 @@
                                 <div class="mil-description">
                                     <div class="mil-card-title">
                                         <h4 class="mil-mb-20">Creating Buzz: The Art of Event Promotion</h4>
-                                        <h6>by: <span class="mil-accent">Jane Meldrum</span></h6>
+                                        <!-- <h6>by: <span class="mil-accent">Jane Meldrum</span></h6> -->
                                     </div>
                                     <div class="mil-card-text">
                                         <p>From planning to execution, discover how the right promotional strategies can ensure maximum turnout and engagement for your event.</p>
@@ -590,7 +590,7 @@
                                 <div class="mil-description">
                                     <div class="mil-card-title">
                                         <h4 class="mil-mb-20">SEO and Content: The Ultimate Growth Formula</h4>
-                                        <h6>by: <span class="mil-accent">Jane Meldrum</span></h6>
+                                        <!-- <h6>by: <span class="mil-accent">Jane Meldrum</span></h6> -->
                                     </div>
                                     <div class="mil-card-text">
                                         <p>Discover how high-quality content and SEO strategies work together to improve online visibility and drive organic traffic.</p>
