--- a/blog-sec1.html
+++ b/blog-sec1.html
@@ -137,7 +137,7 @@
 
                         <a href="blog7.html" class="mil-card mil-mb-60">
                             <div class="mil-cover-frame">
-                                <img src="https://navipromotions.in/img/blog/" alt="project">
+                                <img src="https://navipromotions.in/img/images/blog6.jpg" alt="project">
                             </div>
                             <div class="mil-description">
                                 <div class="mil-card-title">
@@ -176,7 +176,7 @@
 
                         <a href="blog9.html" class="mil-card mil-mb-60">
                             <div class="mil-cover-frame">
-                                <img src="https://navipromotions.in/img/images/blog6.avif" alt="project">
+                                <img src="https://navipromotions.in/img/images/blog8.avif" alt="project">
                             </div>
                             <div class="mil-description">
                                 <div class="mil-card-title">
