--- a/blog8.html
+++ b/blog8.html
@@ -81,7 +81,7 @@
 
         <!-- banner -->
         <div class="mil-banner-sm-2 mil-deep-bg mil-dark-bg">
-            <img src="https://navipromotions.in/img/images/blog6.avif" class="mil-background-image" style="object-position: center" alt="Publication cover">
+            <img src="img/images/blog7.avif" class="mil-background-image" style="object-position: center" alt="Publication cover">
             <div class="mil-overlay"></div>
         </div>
         <!-- banner end -->
@@ -137,10 +137,10 @@
         
                         <div class="row mil-mb-30">
                             <div class="col-xl-6 mil-mb-30">
-                                <img src="https://navipromotions.in/img/images/blog6-sub1.avif" alt="blog" class="mil-post-image">
+                                <img src="img/images/blog71.avif" alt="blog" class="mil-post-image">
                             </div>
                             <div class="col-xl-6 mil-mb-30">
-                                <img src="https://navipromotions.in/img/images/blog6-sub2.avif" alt="blog" class="mil-post-image">
+                                <img src="img/images/blog72.avif" alt="blog" class="mil-post-image">
                             </div>
                         </div>
         
