--- a/index.html
+++ b/index.html
@@ -495,6 +495,7 @@
 
                 <div class="swiper-container mil-works-slider mil-mb-90">
                     <div class="swiper-wrapper">
+
                         <div class="swiper-slide">
 
                             <a href="project1.html" class="mil-card">
@@ -513,6 +514,7 @@
                             </a>
 
                         </div>
+
                         <div class="swiper-slide">
 
                             <a href="project2.html" class="mil-card">
@@ -531,6 +533,7 @@
                             </a>
 
                         </div>
+
                         <div class="swiper-slide">
 
                             <a href="project3.html" class="mil-card">
@@ -549,6 +552,200 @@
                             </a>
 
                         </div>
+
+                        <div class="swiper-slide">
+
+                            <a href="project3.html" class="mil-card">
+                                <div class="mil-cover-frame">
+                                    <img src="https://navipromotions.in/img/images/project3.avif" alt="project">
+                                </div>
+                                <div class="mil-description">
+                                    <div class="mil-card-title">
+                                        <h4 class="mil-mb-20">Alagu Gym</h4>
+                                        <!-- <h6>by: <span class="mil-accent">Roy Bricks</span></h6> -->
+                                    </div>
+                                    <div class="mil-card-text">
+                                        <p>Empowering fitness with a digital edge.</p>
+                                    </div>
+                                </div>
+                            </a>
+
+                        </div>
+
+                        <div class="swiper-slide">
+
+                            <a href="project3.html" class="mil-card">
+                                <div class="mil-cover-frame">
+                                    <img src="https://navipromotions.in/img/images/project3.avif" alt="project">
+                                </div>
+                                <div class="mil-description">
+                                    <div class="mil-card-title">
+                                        <h4 class="mil-mb-20">RG Dental Care</h4>
+                                        <!-- <h6>by: <span class="mil-accent">Roy Bricks</span></h6> -->
+                                    </div>
+                                    <div class="mil-card-text">
+                                        <p>Enhancing dental care with a seamless digital experience.</p>
+                                    </div>
+                                </div>
+                            </a>
+
+                        </div>
+
+                        <div class="swiper-slide">
+
+                            <a href="project3.html" class="mil-card">
+                                <div class="mil-cover-frame">
+                                    <img src="https://navipromotions.in/img/images/project3.avif" alt="project">
+                                </div>
+                                <div class="mil-description">
+                                    <div class="mil-card-title">
+                                        <h4 class="mil-mb-20">Geminiganesan Audit & Tax Consultant</h4>
+                                        <!-- <h6>by: <span class="mil-accent">Roy Bricks</span></h6> -->
+                                    </div>
+                                    <div class="mil-card-text">
+                                        <p>Showcasing financial expertise with a modern web presence.</p>
+                                    </div>
+                                </div>
+                            </a>
+
+                        </div>
+
+                        <div class="swiper-slide">
+
+                            <a href="project3.html" class="mil-card">
+                                <div class="mil-cover-frame">
+                                    <img src="https://navipromotions.in/img/images/project3.avif" alt="project">
+                                </div>
+                                <div class="mil-description">
+                                    <div class="mil-card-title">
+                                        <h4 class="mil-mb-20">Ara Aesthetics</h4>
+                                        <!-- <h6>by: <span class="mil-accent">Roy Bricks</span></h6> -->
+                                    </div>
+                                    <div class="mil-card-text">
+                                        <p>Showcasing beauty through impactful design and smart promotion.</p>
+                                    </div>
+                                </div>
+                            </a>
+
+                        </div>
+
+                        <div class="swiper-slide">
+
+                            <a href="project3.html" class="mil-card">
+                                <div class="mil-cover-frame">
+                                    <img src="https://navipromotions.in/img/images/project3.avif" alt="project">
+                                </div>
+                                <div class="mil-description">
+                                    <div class="mil-card-title">
+                                        <h4 class="mil-mb-20">Athithya Guru Builders</h4>
+                                        <!-- <h6>by: <span class="mil-accent">Roy Bricks</span></h6> -->
+                                    </div>
+                                    <div class="mil-card-text">
+                                        <p>Showcasing construction excellence through design.</p>
+                                    </div>
+                                </div>
+                            </a>
+
+                        </div>
+
+                        <div class="swiper-slide">
+
+                            <a href="project3.html" class="mil-card">
+                                <div class="mil-cover-frame">
+                                    <img src="https://navipromotions.in/img/images/project3.avif" alt="project">
+                                </div>
+                                <div class="mil-description">
+                                    <div class="mil-card-title">
+                                        <h4 class="mil-mb-20">Shobi Makeover</h4>
+                                        <!-- <h6>by: <span class="mil-accent">Roy Bricks</span></h6> -->
+                                    </div>
+                                    <div class="mil-card-text">
+                                        <p>Empowering beauty brands through creative visuals and smart promotion.</p>
+                                    </div>
+                                </div>
+                            </a>
+
+                        </div>
+
+                        <div class="swiper-slide">
+
+                            <a href="project3.html" class="mil-card">
+                                <div class="mil-cover-frame">
+                                    <img src="https://navipromotions.in/img/images/project3.avif" alt="project">
+                                </div>
+                                <div class="mil-description">
+                                    <div class="mil-card-title">
+                                        <h4 class="mil-mb-20">Lavanya Nail Art</h4>
+                                        <!-- <h6>by: <span class="mil-accent">Roy Bricks</span></h6> -->
+                                    </div>
+                                    <div class="mil-card-text">
+                                        <p>Beautifying brands through visual storytelling.</p>
+                                    </div>
+                                </div>
+                            </a>
+
+                        </div>
+
+                        <div class="swiper-slide">
+
+                            <a href="project3.html" class="mil-card">
+                                <div class="mil-cover-frame">
+                                    <img src="https://navipromotions.in/img/images/project3.avif" alt="project">
+                                </div>
+                                <div class="mil-description">
+                                    <div class="mil-card-title">
+                                        <h4 class="mil-mb-20">Shobi Makeover</h4>
+                                        <!-- <h6>by: <span class="mil-accent">Roy Bricks</span></h6> -->
+                                    </div>
+                                    <div class="mil-card-text">
+                                        <p>Amplifying beauty and elegance through impactful graphic design.</p>
+                                    </div>
+                                </div>
+                            </a>
+
+                        </div>
+
+
+                        <div class="swiper-slide">
+
+                            <a href="project3.html" class="mil-card">
+                                <div class="mil-cover-frame">
+                                    <img src="https://navipromotions.in/img/images/project3.avif" alt="project">
+                                </div>
+                                <div class="mil-description">
+                                    <div class="mil-card-title">
+                                        <h4 class="mil-mb-20">Anaimalai Toyotas</h4>
+                                        <!-- <h6>by: <span class="mil-accent">Roy Bricks</span></h6> -->
+                                    </div>
+                                    <div class="mil-card-text">
+                                        <p>Showcasing excellence in automobiles through dynamic video marketing.</p>
+                                    </div>
+                                </div>
+                            </a>
+
+                        </div>
+
+
+                        <div class="swiper-slide">
+
+                            <a href="project3.html" class="mil-card">
+                                <div class="mil-cover-frame">
+                                    <img src="https://navipromotions.in/img/images/project3.avif" alt="project">
+                                </div>
+                                <div class="mil-description">
+                                    <div class="mil-card-title">
+                                        <h4 class="mil-mb-20">Shobi Makeover</h4>
+                                        <!-- <h6>by: <span class="mil-accent">Roy Bricks</span></h6> -->
+                                    </div>
+                                    <div class="mil-card-text">
+                                        <p>Enhancing beauty services with a seamless digital experience.</p>
+                                    </div>
+                                </div>
+                            </a>
+
+                        </div>
+
+
                         <!-- <div class="swiper-slide">
 
                             <a href="project.html" class="mil-card">
