--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
         <!-- banner end -->
 
         <!-- partners -->
-        <!-- <div class="mil-partners mil-p-90-60">
+        <div class="mil-partners mil-p-90-60">
             <div class="container">
                 <div class="mil-partners-frame">
                     <a href="#."><img src="https://navipromotions.in/img/partners/1.png" alt="partner"></a>
@@ -221,7 +221,7 @@
                     <a href="#."><img src="https://navipromotions.in/img/partners/6.png" alt="partner"></a>
                 </div>
             </div>
-        </div> -->
+        </div>
         <!-- partners end -->
 
         <!-- <div class="container">
@@ -555,7 +555,7 @@
 
                         <div class="swiper-slide">
 
-                            <a href="project3.html" class="mil-card">
+                            <a href="project4.html" class="mil-card">
                                 <div class="mil-cover-frame">
                                     <img src="https://navipromotions.in/img/images/project3.avif" alt="project">
                                 </div>
@@ -574,7 +574,7 @@
 
                         <div class="swiper-slide">
 
-                            <a href="project3.html" class="mil-card">
+                            <a href="project5.html" class="mil-card">
                                 <div class="mil-cover-frame">
                                     <img src="https://navipromotions.in/img/images/project3.avif" alt="project">
                                 </div>
@@ -593,7 +593,7 @@
 
                         <div class="swiper-slide">
 
-                            <a href="project3.html" class="mil-card">
+                            <a href="project6.html" class="mil-card">
                                 <div class="mil-cover-frame">
                                     <img src="https://navipromotions.in/img/images/project3.avif" alt="project">
                                 </div>
@@ -612,7 +612,7 @@
 
                         <div class="swiper-slide">
 
-                            <a href="project3.html" class="mil-card">
+                            <a href="project7.html" class="mil-card">
                                 <div class="mil-cover-frame">
                                     <img src="https://navipromotions.in/img/images/project3.avif" alt="project">
                                 </div>
@@ -631,7 +631,7 @@
 
                         <div class="swiper-slide">
 
-                            <a href="project3.html" class="mil-card">
+                            <a href="project8.html" class="mil-card">
                                 <div class="mil-cover-frame">
                                     <img src="https://navipromotions.in/img/images/project3.avif" alt="project">
                                 </div>
@@ -650,7 +650,7 @@
 
                         <div class="swiper-slide">
 
-                            <a href="project3.html" class="mil-card">
+                            <a href="project9.html" class="mil-card">
                                 <div class="mil-cover-frame">
                                     <img src="https://navipromotions.in/img/images/project3.avif" alt="project">
                                 </div>
@@ -669,7 +669,7 @@
 
                         <div class="swiper-slide">
 
-                            <a href="project3.html" class="mil-card">
+                            <a href="project10.html" class="mil-card">
                                 <div class="mil-cover-frame">
                                     <img src="https://navipromotions.in/img/images/project3.avif" alt="project">
                                 </div>
@@ -688,7 +688,7 @@
 
                         <div class="swiper-slide">
 
-                            <a href="project3.html" class="mil-card">
+                            <a href="project11.html" class="mil-card">
                                 <div class="mil-cover-frame">
                                     <img src="https://navipromotions.in/img/images/project3.avif" alt="project">
                                 </div>
@@ -708,7 +708,7 @@
 
                         <div class="swiper-slide">
 
-                            <a href="project3.html" class="mil-card">
+                            <a href="project12.html" class="mil-card">
                                 <div class="mil-cover-frame">
                                     <img src="https://navipromotions.in/img/images/project3.avif" alt="project">
                                 </div>
@@ -728,7 +728,7 @@
 
                         <div class="swiper-slide">
 
-                            <a href="project3.html" class="mil-card">
+                            <a href="project13.html" class="mil-card">
                                 <div class="mil-cover-frame">
                                     <img src="https://navipromotions.in/img/images/project3.avif" alt="project">
                                 </div>
